--- a/style.css
+++ b/style.css
@@ -122,6 +122,9 @@ header.hero {
     letter-spacing: 2px;
     color: #e0b973;
     font-weight: bold;
+    display: inline-flex;
+    width: 50px;
+    height: 50px;
 }
 .nav-links {
     list-style: none;
