--- a/style.css
+++ b/style.css
@@ -198,6 +198,8 @@ body {
     color: #fff;
     line-height: 1.6;
     overflow-x: hidden;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     scrollbar-width: none;       /* Firefox */
     -ms-overflow-style: none;
     isolation: isolate;
